# receiptscanner-ssi

./: .gitignore  Dockerfile  LICENSE.md  README.md  environment.yml  paddleocr.py.patch  pyproject.toml  run.py
benchmarks/: benchmark_ml_vs_rb.py  benchmark_pipeline.py  benchmark_pre_ocr.py  helpers.py  pipeline_with_debug.py
benchmarks/assets/: annotation.json
benchmarks/model/: basic_receipt.py
docker/: Dockerfile
k8s/: debug-pvc.yaml  ocr-microservice-deployment.yml  ocr-microservice-hpa.yml  rabbitmq-deployment.yml  rabbitmq-management-service.yml
src/ocr_microservice/message_bus_consumer/: message_bus_consumer.py
src/ocr_microservice/model_training/lilt/: .gitignore  README.md  inference.py  labels.xlsx  paddleocr2csv.py  train.py
src/ocr_microservice/model_training/paddleocr/: README.md
src/ocr_microservice/model_training/segformer/: train.md  train.py
src/ocr_microservice/model_training/yolos/: README.md  detr.py  inference.py  rotate.py  train.py  yolos_training.py
src/ocr_microservice/ocr_pipeline/: injector.py  ocr_pipeline.py  pipeline_image.py
src/ocr_microservice/ocr_pipeline/config/: default.py  ocr_lilt.py
src/ocr_microservice/ocr_pipeline/helpers/: logger.py  save_file.py  type_check.py
src/ocr_microservice/ocr_pipeline/multi_image/: combine_multi_image.py
src/ocr_microservice/ocr_pipeline/ocr/: inspect_results.py  ocr_image.py
src/ocr_microservice/ocr_pipeline/post_ocr/: post_ocr.py
src/ocr_microservice/ocr_pipeline/pre_ocr/: pre_ocr.py
tests/: test_full_pipeline.py  test_pdfs.py  test_pre_ocr.py
(+27 files in other folders)
