[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

#[tool.setuptools.packages]
#find = {"" = "src"}

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
package-data = { "ocr_microservice" = ["resources/**/*"] }

[project]
name = "ocr_microservice"
requires-python = "~=3.10"
readme = "README.md"
dynamic = ["version"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources.*", # caused by paddleocr
    "ignore:pkg_resources is deprecated.*:DeprecationWarning:setuptools.sandbox.*" # caused by paddleocr
]